add contact form

--- a/index.html
+++ b/index.html
@@ -389,16 +389,16 @@
 
                             </h2>
                             <p style="text-align: justify;">
-                                Ofrecer a través de nuestros servicios, soluciones y herramientas que mejoren sus resultados 
-                                y procesos, facilitando la forma de hacer las cosas. 
+                                Ofrecer a través de nuestros servicios, soluciones y herramientas que mejoren sus resultados
+                                y procesos, facilitando la forma de hacer las cosas.
                             </p>
                             <p style="text-align: justify;">
                                 Nuestro valor agregado es crear experiencia y relaciones de largo plazo,
-                                ofreciendo servicios innovadores que motiven a todos sus colaboradores 
-                                y equipos de trabajo a formar una nueva cultura de trabajo. 
-                                Nuestro plus, fomentar una imagen y sentido de pertenencia con nuestro 
-                                servicio especializado de personalización que promueve el arraigo 
-                                de sus colaboradores. 
+                                ofreciendo servicios innovadores que motiven a todos sus colaboradores
+                                y equipos de trabajo a formar una nueva cultura de trabajo.
+                                Nuestro plus, fomentar una imagen y sentido de pertenencia con nuestro
+                                servicio especializado de personalización que promueve el arraigo
+                                de sus colaboradores.
 
                             </p>
                         </div>
@@ -431,8 +431,8 @@
                                     <div class="c02_det">
                                         <h2><a href="#">Misión</a></h2>
                                         <p style="text-align: justify;">
-                                            Crear valor agregado y visión estratégica para todos 
-                                            nuestros colaboradores, clientes y socios comerciales 
+                                            Crear valor agregado y visión estratégica para todos
+                                            nuestros colaboradores, clientes y socios comerciales
                                             a través de nuestras 7 opciones de servicios.
 
                                         </p>
@@ -442,10 +442,10 @@
                                 <div class="case_02">
                                     <div class="c02_det">
                                         <h2><a href="#">Visión</a></h2>
-                                        <p style="text-align: justify;"> 
-                                            Ofrecer servicios diferenciados en consultoría 
-                                            siendo reconocidos  por la experiencia de mejores prácticas, 
-                                            resultados y el valor agregado entregado a nuestros clientes 
+                                        <p style="text-align: justify;">
+                                            Ofrecer servicios diferenciados en consultoría
+                                            siendo reconocidos  por la experiencia de mejores prácticas,
+                                            resultados y el valor agregado entregado a nuestros clientes
                                             y socios comerciales.
 
                                         </p>
@@ -455,7 +455,7 @@
                                     <div class="c02_det">
                                         <h2><a href="#">Valores</a></h2>
                                         <p style="text-align: justify;">
-                                            Lealtad, Honestidad, Respeto, Liderazgo, Compromiso, 
+                                            Lealtad, Honestidad, Respeto, Liderazgo, Compromiso,
                                             Responsabilidad, Humildad.
 
                                         </p>
@@ -466,8 +466,8 @@
                                     <div class="c02_det">
                                         <h2><a href="#">Competencias</a></h2>
                                         <p style="text-align: justify;">
-                                            Trabajo en equipo, Asertividad, Desarrollo de líderes, 
-                                            Organización y Planificación, Orientación al Cliente, 
+                                            Trabajo en equipo, Asertividad, Desarrollo de líderes,
+                                            Organización y Planificación, Orientación al Cliente,
                                             Ejecución y Sentido de urgencia.
 
                                         </p>
@@ -501,9 +501,9 @@
                                     <i class="flaticon-092-invoice-3"></i>
                                     <h3><a href="operation_service.html">Operación y </br>comercialización</a></h3>
                                     <p>
-                                        Diagnosticamos el desempeño y evolución de tus estrategias comerciales 
-                                        así como el ciclo de venta. Validamos tus planes comerciales y mercadológicos 
-                                        aplicando una metodología diseñada en programas de coaching para equipos 
+                                        Diagnosticamos el desempeño y evolución de tus estrategias comerciales
+                                        así como el ciclo de venta. Validamos tus planes comerciales y mercadológicos
+                                        aplicando una metodología diseñada en programas de coaching para equipos
                                         gerenciales y jefaturas.
                                     </p>
                                     <a class="learn_more_lnk" href="operation_service.html"></br>Leer Más</a>
@@ -517,9 +517,9 @@
                                     <i class="flaticon-205-money-2"></i>
                                     <h3><a href="finance_service.html">Finanzas, administración </br>y planeación fiscal</a></h3>
                                     <p>
-                                        Ofrecemos servicios de análisis a la calidad y confiabilidad 
-                                        de tu información financiera mediante revisiones estratégicas 
-                                        a tus principales indicadores, ayudando a la efectiva toma 
+                                        Ofrecemos servicios de análisis a la calidad y confiabilidad
+                                        de tu información financiera mediante revisiones estratégicas
+                                        a tus principales indicadores, ayudando a la efectiva toma
                                         de decisiones.
                                     </p>
                                     <a class="learn_more_lnk" href="finance_service.html"></br></br>Leer Más</a>
@@ -533,7 +533,7 @@
                                     <i class="flaticon-075-user-3"></i>
                                     <h3><a href="capital_service.html">Capital humano y desarrollo</br>organizacional</a></h3>
                                     <p>
-                                        Proveemos y administramos la mejor plataforma de herramientas 
+                                        Proveemos y administramos la mejor plataforma de herramientas
                                         de medición de tu talento: psicometrías, evaluaciones de desempeño,
                                         evaluaciones 360 y clima laboral.
                                     </p>
@@ -547,12 +547,12 @@
                                 <div class="sr01_dtl text-center">
                                     <i class="flaticon-095-magnifying-glass"></i>
                                     <h3>
-                                        <a href="headhunting_service.html">Atracción de talento </br>(Headhunting), evaluación </br>de candidatos, 
+                                        <a href="headhunting_service.html">Atracción de talento </br>(Headhunting), evaluación </br>de candidatos,
                                     </br>Assessment Center.
                                         </a>
                                     </h3>
                                     <p>
-                                        Contamos con un equipo de profesionales dedicados a la aplicación 
+                                        Contamos con un equipo de profesionales dedicados a la aplicación
                                         del  método más eficiente para la evaluación del talento.
                                     </p>
                                     <a class="learn_more_lnk" href="headhunting_service.html">Leer Más</a>
@@ -567,7 +567,7 @@
                                     <h3><a href="coso_service.html">Control interno, procesos,
                                     </br>medición del riesgo </br>y método COSO.</a></h3>
                                     <p>
-                                        Desarrollamos para ti un modelo de riesgo en base a las necesidades 
+                                        Desarrollamos para ti un modelo de riesgo en base a las necesidades
                                         de tu negocio.
                                     </p>
                                     <a class="learn_more_lnk" href="coso_service.html"></br></br></br>Leer Más</a>
@@ -619,36 +619,39 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="quote_form">
-                            <form method="post" action="#">
+                            <form  method="POST"
+                                   id="my-form"
+                                   action="https://script.google.com/macros/s/AKfycbxw9Ag3VRnpNDkp2CuwK6v3xjzq3FPuMtWIpjlLUfaBFCAEvVCUDX1fSGYL2gTilc9d/exec"
+                            >
                                 <div class="row">
                                     <div class="col-md-6 col-lg-6">
-                                        <input type="text" name="q_fname" placeholder="Nombre *"/>
+                                        <input type="text" name="Name" placeholder="Nombre *"/>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
-                                        <input type="text" name="q_lname" placeholder="Apellidos *"/>
+                                        <input type="text" name="LastName" placeholder="Apellidos *"/>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
-                                        <input type="email" name="q_email" placeholder="Email *"/>
+                                        <input type="email" name="Email" placeholder="Email *"/>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
-                                        <input type="text" name="q_phone" placeholder="Teléfono *"/>
+                                        <input type="text" name="Phone" placeholder="Teléfono *"/>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
-                                        <select name="q_type">
-                                            <option value="">¿Qué servicio me interesa?</option>
-                                            <option value="1">Operación y comercialización.</option>
-                                            <option value="2">Finanzas, administración y planeación fiscal.</option>
-                                            <option value="3">Capital humano y desarrollo organizacional.</option>
-                                            <option value="4">Atracción de talento (Headhunting).</option>
-                                            <option value="5">Control interno, procesos, medición del riesgo y método COSO.</option>
-                                            <option value="6">Consejero independiente y gobierno corporativo.</option>
-                                            <option value="7">Identidad corporativa, impresos y promocionales.</option>
-                                            <option value="8">Otro.</option>
+                                        <select name="Service">
+                                            <option value="No selecciono">¿Qué servicio me interesa?</option>
+                                            <option value="Operación y comercialización">Operación y comercialización.</option>
+                                            <option value="Finanzas, administración y planeación fiscal">Finanzas, administración y planeación fiscal.</option>
+                                            <option value="Capital humano y desarrollo organizacional">Capital humano y desarrollo organizacional.</option>
+                                            <option value="Atracción de talento (Headhunting)">Atracción de talento (Headhunting).</option>
+                                            <option value="Control interno, procesos, medición del riesgo y método COSO">Control interno, procesos, medición del riesgo y método COSO.</option>
+                                            <option value="Consejero independiente y gobierno corporativo">Consejero independiente y gobierno corporativo.</option>
+                                            <option value="Identidad corporativa, impresos y promocionales">Identidad corporativa, impresos y promocionales.</option>
+                                            <option value="Otro">Otro.</option>
 
                                         </select>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
-                                        <button type="submit" name="q_submit"><span>Enviar<i class="bx bx-right-arrow-alt"></i></span></button>
+                                        <button type="submit"><span>Enviar<i class="bx bx-right-arrow-alt"></i></span></button>
                                     </div>
                                 </div>
                             </form>
@@ -713,6 +716,7 @@
         <!-- WhatsApp button --->
         <script type="text/javascript" src="js/floating-wpp.min.js"></script>
         <link rel="stylesheet" href="js/floating-wpp.min.css">
+        <script src="js/query.serialize-object.min.js"></script>
         <script type="text/javascript" src="js/services.js"></script>
     </body>
 </html>
