Make letter bigger

--- a/index.html
+++ b/index.html
@@ -368,8 +368,11 @@
                             <p style="text-align: justify;">
                                 De forma descendente es analítico, va de lo general a lo particular, simboliza el ciclo comercial de ventas, mejora las decisiones, busca la causa raíz y motiva al cambio.
                             </p>
-                            <div>Nuestro lema:
-                                <span style="font-style: italic;">“Hazlo con pasión, haz que las cosas sucedan”.</span>
+                            <div>
+                                <p>
+                                    Nuestro lema:
+                                    <span style="font-style: italic;">“Hazlo con pasión, haz que las cosas sucedan”.</span>
+                                </p>    
                             </div>
                         </div>
                     </div>
