feat: change telephone and contact form

--- a/index.html
+++ b/index.html
@@ -625,19 +625,19 @@
                             >
                                 <div class="row">
                                     <div class="col-md-6 col-lg-6">
-                                        <input type="text" name="Name" placeholder="Nombre *"/>
+                                        <input required type="text" name="Name" placeholder="Nombre *"/>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
-                                        <input type="text" name="LastName" placeholder="Apellidos *"/>
+                                        <input required type="text" name="LastName" placeholder="Apellidos *"/>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
-                                        <input type="email" name="Email" placeholder="Email *"/>
+                                        <input required  type="email" name="Email" placeholder="Email *"/>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
-                                        <input type="text" name="Phone" placeholder="Teléfono *"/>
+                                        <input required type="text" name="Phone" placeholder="Teléfono *"/>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
-                                        <select name="Service">
+                                        <select required name="Service">
                                             <option value="No selecciono">¿Qué servicio me interesa?</option>
                                             <option value="Operación y comercialización">Operación y comercialización.</option>
                                             <option value="Finanzas, administración y planeación fiscal">Finanzas, administración y planeación fiscal.</option>
@@ -649,6 +649,12 @@
                                             <option value="Otro">Otro.</option>
 
                                         </select>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6">
+                                        <input type="text" name="Company" placeholder="Compañia"/>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6">
+                                        <input type="text" name="Notes" placeholder="Notas"/>
                                     </div>
                                     <div class="col-md-6 col-lg-6">
                                         <button type="submit"><span>Enviar<i class="bx bx-right-arrow-alt"></i></span></button>
@@ -669,7 +675,7 @@
                     <div class="col-lg-12">
                         <div class="copbar"></div>
                         <p class="copies">
-                            2020 © <a href="#">Financeya Template</a>. All rights reserved.
+                            Dimensión 360 <a href="mailto:contacto@dimension360.mx"> Email </a> <a href="tel:3343044688">(33) 43 04 46 88</a>
                         </p>
                     </div>
                 </div>
