--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                                     <li class="menu-item-has-children">
                                         <a href="our_services.html">Servicios</a>
                                     </li>
+                                    <li><a href="blog_standard.html">Blog</a></li>
                                     <li><a href="#contact">Contacto</a></li>
                                 </ul>
                             </nav>
