--- a/index.html
+++ b/index.html
@@ -38,11 +38,8 @@
 
         <!-- Netlify Config-->
         <!-- Include the script that enables Netlify Identity on this page. -->
-        <script
-        src="https://cdn.jsdelivr.net/npm/netlify-identity-widget@1/build/netlify-identity-widget.min.js"
-        async
-        defer
-        ></script>
+        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 
     </head>
     <body>
@@ -740,10 +737,10 @@
         <!-- Netlify Config-->
         <script>
             if (window.netlifyIdentity) {
-              window.netlifyIdentity.on('init', (user) => {
+              window.netlifyIdentity.on("init", user => {
                 if (!user) {
-                  window.netlifyIdentity.on('login', () => {
-                    document.location.href = '/admin/';
+                  window.netlifyIdentity.on("login", () => {
+                    document.location.href = "/admin/";
                   });
                 }
               });
