--- a/index.html
+++ b/index.html
@@ -733,11 +733,20 @@
 <section class="copyright">
     <div class="container">
         <div class="row footer">
-            <div class="col-md-6 col-lg-6">
+            <div class="col-md-4 col-lg-4"></div>
+            <div class="col-md-4 col-lg-4" 
+            style="margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 35%;
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);">
                 <a class="footer" href="mailto:contacto@dimension360.mx"> contacto@dimension360.mx </a>
-            </div>
-            <div class="col-md-6 col-lg-6 ">
+                &emsp;
                 <a class="footer" href="tel:3343044688">(33) 43 04 46 88</a>
+            </div>
+            <div class="col-md-4 col-lg-4 ">
+               
             </div>
 
         </div>
