Add privacy to footer

--- a/index.html
+++ b/index.html
@@ -744,6 +744,10 @@
                 <a class="footer" href="mailto:contacto@dimension360.mx"> contacto@dimension360.mx </a>
                 &emsp;
                 <a class="footer" href="tel:3343044688">(33) 43 04 46 88</a>
+                </br>
+                <a class="footer" style="padding-left: 2em;" href="privacy.html">
+                    Conoce Nuestro Aviso de Privacidad
+                </a>
             </div>
             <div class="col-md-4 col-lg-4 ">
                
