--- a/privacy.html
+++ b/privacy.html
@@ -129,16 +129,16 @@
                         </div>
                         <ul>
                             <li class="current-menu-item menu-item-has-children">
-                                <a href="#home">Home</a>
+                                <a href="index.html#home">Home</a>
                             </li>
                             <li class="menu-item-has-children">
-                                <a href="#company">Nosotros</a>
+                                <a href="index.html#company">Nosotros</a>
                             </li>
                             <li class="menu-item-has-children">
                                 <a href="our_services.html">Servicios</a>
                             </li>
                             <li><a href="blog_standard.html">Blog</a></li>
-                            <li><a href="#contact">Contacto</a></li>
+                            <li><a href="index.html#contact">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
