Add footer to all pages

--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
 </section>
 <!-- Quote Section End -->
 
-<!-- Copyright Section Start -->
+<!-- Footer Section Start -->
 <section class="copyright">
     <div class="container">
         <div class="row footer">
@@ -757,7 +757,7 @@
     </div>
     </div>
 </section>
-<!-- Copyright Section End -->
+<!-- Footer Section End -->
 
 <!-- Back To Top Start -->
 <a href="#" id="backtotop"><i class="bx bxs-arrow-to-top"></i></a>
