--- a/coso_service.html
+++ b/coso_service.html
@@ -22,6 +22,8 @@
         <link rel="stylesheet" type="text/css" href="css/ignore_for_wp.css"/>
         <link rel="stylesheet" type="text/css" href="css/theme.css"/>
         <link rel="stylesheet" type="text/css" href="css/responsive.css"/>
+        <link rel="stylesheet" type="text/css" href="css/services.css"/>
+
 
         <!-- Favicon Icon -->
         <link rel="icon"  type="image/png" href="images/logo.png">
@@ -137,20 +139,35 @@
         </section>
         <!-- Single Service Section End -->
 
-        <!-- Copyright Section Start -->
+        <!-- Footer Section Start -->
         <section class="copyright">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="copbar"></div>
-                        <p class="copies">
-                            2020 © <a href="#">Financeya Template</a>. All rights reserved.
-                        </p>
+                <div class="row footer">
+                    <div class="col-md-4 col-lg-4"></div>
+                    <div class="col-md-4 col-lg-4" 
+                    style="margin: 0;
+                    position: absolute;
+                    top: 50%;
+                    left: 35%;
+                    -ms-transform: translateY(-50%);
+                    transform: translateY(-50%);">
+                        <a class="footer" href="mailto:contacto@dimension360.mx"> contacto@dimension360.mx </a>
+                        &emsp;
+                        <a class="footer" href="tel:3343044688">(33) 43 04 46 88</a>
+                        </br>
+                        <a class="footer" style="padding-left: 2em;" href="privacy.html">
+                            Conoce Nuestro Aviso de Privacidad
+                        </a>
                     </div>
+                    <div class="col-md-4 col-lg-4 ">
+                    
+                    </div>
+
                 </div>
             </div>
+            </div>
         </section>
-        <!-- Copyright Section End -->
+        <!-- Footer Section End -->
         
         <!-- Back To Top Start -->
         <a href="#" id="backtotop"><i class="bx bxs-arrow-to-top"></i></a>
