--- a/operation_service.html
+++ b/operation_service.html
@@ -109,6 +109,7 @@
                                 <li class="menu-item-has-children">
                                     <a href="our_services.html">Servicios</a>
                                 </li>
+                                <li><a href="blog_standard.html">Blog</a></li>
                                 <li><a href="index.html#contact">Contacto</a></li>
                             </ul>
                         </nav>
