--- a/single_service.html
+++ b/single_service.html
@@ -108,6 +108,7 @@
                                 <li class="menu-item-has-children">
                                     <a href="our_services.html">Servicios</a>
                                 </li>
+                                <li><a href="blog_standard.html">Blog</a></li>
                                 <li><a href="index.html#contact">Contacto</a></li>
                             </ul>
                         </nav>
@@ -247,6 +248,6 @@
         <link rel="stylesheet" href="js/floating-wpp.min.css">
         <script src="js/query.serialize-object.min.js"></script>
         <script type="text/javascript" src="js/services.js"></script>
-        
+
     </body>
 </html>
