--- a/our_services.html
+++ b/our_services.html
@@ -268,35 +268,29 @@
         </section>
         <!-- Service Section End -->
 
-        <!-- Footer Section Start -->
-<section class="copyright">
-    <div class="container">
-        <div class="row footer">
-            <div class="col-md-4 col-lg-4"></div>
-            <div class="col-md-4 col-lg-4" 
-            style="margin: 0;
-            position: absolute;
-            top: 50%;
-            left: 35%;
-            -ms-transform: translateY(-50%);
-            transform: translateY(-50%);">
-                <a class="footer" href="mailto:contacto@dimension360.mx"> contacto@dimension360.mx </a>
-                &emsp;
-                <a class="footer" href="tel:3343044688">(33) 43 04 46 88</a>
-                </br>
-                <a class="footer" style="padding-left: 2em;" href="privacy.html">
-                    Conoce Nuestro Aviso de Privacidad
-                </a>
-            </div>
-            <div class="col-md-4 col-lg-4 ">
-               
-            </div>
+    <!-- Footer Section Start -->
+    <section class="copyright">
+        <div class="container">
+            <div class="row footer">
+                <div class="col-md-4 col-lg-4"></div>
+                <div class="col-md-4 col-lg-4 text-center pt-lg-4">
+                    <a class="footer" href="mailto:contacto@dimension360.mx"> contacto@dimension360.mx </a>
+                    &emsp;
+                    <a class="footer" href="tel:3343044688">(33) 43 04 46 88</a>
+                    </br>
+                    <a class="footer"  href="privacy.html">
+                        Conoce Nuestro Aviso de Privacidad
+                    </a>
+                </div>
+                <div class="col-md-4 col-lg-4 ">
 
+                </div>
+
+            </div>
         </div>
-    </div>
-    </div>
-</section>
-<!-- Footer Section End -->
+        </div>
+    </section>
+    <!-- Footer Section End -->
 
         <!-- Back To Top Start -->
         <a href="#" id="backtotop"><i class="bx bxs-arrow-to-top"></i></a>
